rtg_tests/negative/module_import_cycle/lib/go.mod
module example.com/rtgtests/negative/module_cycle/lib

go 1.25
